--- a/index.html
+++ b/index.html
@@ -9,6 +9,47 @@
     <title>Calculator</title>
 </head>
 <body>
+    <div class="display"> 
+        <p class="input">Input</p>
+     </div>
+    <div class="topBtn">
+     <button class="clr">Clear</button>
+    </div>
+    <div class="calculator">
+       
+        <div class="container">
+        <button class="btn">0</button>
+        <button class="btn">1</button>
+        <button class="btn">2</button>
+        <button class="btn">+</button>
+        <button class="btn">3</button>
+        <button class="btn">4</button>
+        <button class="btn">5</button>
+        <button class="btn">-</button>
+        <button class="btn">6</button>
+        <button class="btn">7</button>
+        <button class="btn">8</button>
+        <button class="btn">x</button>
+        <button class="btn">9</button>
+        <button class="btn">0</button>
+        <button class="btn">=</button>
+        <button class="btn">÷</button>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     
 </body>
 </html>
