added visual styling

--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div class="display"> 
-        <p class="input">Input</p>
+    <div class="calcBody">
+    <div class="display">
+        <div class="lastInput">
+            <div class="aboveInput">Above Input</div>
+        </div> 
+        <h3 class="input">Input</h3>
      </div>
     <div class="topBtn">
      <button class="clr">Clear</button>
+     <button class="dlt">Delete</button>
     </div>
     <div class="calculator">
-       
         <div class="container">
         <button class="btn">0</button>
         <button class="btn">1</button>
@@ -36,6 +40,7 @@
         <button class="btn">÷</button>
         </div>
     </div>
+</div>
 
 
 
