--- a/index.html
+++ b/index.html
@@ -12,49 +12,34 @@
     <div class="calcBody">
     <div class="display">
         <div class="lastInput">
-            <div class="aboveInput">Above Input</div>
+            <div class="aboveInput"></div>
         </div> 
-        <h3 class="input">Input</h3>
+        <div class="input"></div>
      </div>
     <div class="topBtn">
-     <button class="clr">Clear</button>
-     <button class="dlt">Delete</button>
+     <button class="clear">Clear</button>
+     <button class="delete">Delete</button>
     </div>
     <div class="calculator">
         <div class="container">
-        <button class="btn">0</button>
-        <button class="btn">1</button>
-        <button class="btn">2</button>
-        <button class="btn">+</button>
-        <button class="btn">3</button>
-        <button class="btn">4</button>
-        <button class="btn">5</button>
-        <button class="btn">-</button>
-        <button class="btn">6</button>
-        <button class="btn">7</button>
-        <button class="btn">8</button>
-        <button class="btn">x</button>
-        <button class="btn">9</button>
-        <button class="btn">0</button>
-        <button class="btn">=</button>
-        <button class="btn">÷</button>
+        <button class="btn number"  id="zero">0</button>
+        <button class="btn number" id="one">1</button>
+        <button class="btn number" id="two">2</button>
+        <button class="btn operator" id="plus">+</button>
+        <button class="btn number" id="three">3</button>
+        <button class="btn number" id="four">4</button>
+        <button class="btn number" id="five">5</button>
+        <button class="btn operator" id="minus">-</button>
+        <button class="btn number" id="six">6</button>
+        <button class="btn number" id="seven">7</button>
+        <button class="btn number" id="eight">8</button>
+        <button class="btn operator" id="times">*</button>
+        <button class="btn number" id="nine">9</button>
+        <button class="btn dot" id="decimal">.</button>
+        <button class="btn" id="equals">=</button>
+        <button class="btn operator" id="divide">/</button>
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
 </body>
 </html>
